<resources>
    <string name="ActivadadPrincipalAñadirnuevaruta">Add new route</string>
    <string name="ActivadadPrincipalVermisrutas">View my routes</string>
    <string name="ActivadadPrincipalAyuda">Help</string>
    <string name="ActivadadPrincipalbtnAcercade">About</string>
    <string name="ActivadadPrincipalSalir">Exit</string>
    <string name="ActivadadAcercaDeDescripcionAcercade">An application designed to explore and share natural routes with complete freedom.</string>
    <string name="ActidadeAcercaDeTextoAutor">Santiago and Mayko</string>
    <string name="ActividadAcercaDeFecha">Date: 2026</string>
    <string name="ActidadeAcercaDeTextoVersion">Version: 1.0.0</string>
    <string name="ActidadeAcercaDeBtnContactarConSoporte">Contact support</string>
    <string name="ActivadadAcercaDeTitulo">CaminaLibre</string>

    <string name="app_name">CaminaLibre</string>
    <string name="AltaRutasNombre">Route name:</string>
    <string name="AltaRutasLocalizacion">Location:</string>
    <string name="AltaRutasTipoRuta">Type:</string>
    <string name="AltaRutasTipoCircular">Circular</string>
    <string name="AltaRutasTipoLineal">Lineal</string>
    <string name="AltaRutasDificultad">Difficulty:</string>
    <string name="AltaRutasDistancia">Distance (km):</string>
    <string name="AltaRutasDescripcion">Description:</string>
    <string name="AltaRutasNotas">Notes:</string>
    <string name="AltaRutasFavorita">Favorite:</string>
    <string name="AltaRutasTextoBoton">Save</string>

    <string name="FichaTecnicaTiempoEstimado">Estimated time:</string>
    <string name="AltaRutasLatitud">Latitude:</string>
    <string name="AltaRutasLongitud">Longitude:</string>
    <string name="FichaTecnica0" translatable="false">0</string>
    <string name="FichaTecnicaMinutos">minutes</string>
    <string name="FichaTecnica0Minutos">0 minutes</string>

    <string name="BottomItemNueva">New</string>
    <string name="BottomItemRutas">Routes</string>
    <string name="BottomItemAyuda">Help</string>
    <string name="BottomItemAcercaDe">About</string>
    <string name="BottomItemSalir">Exit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open\n</string>
    <string name="navigation_drawer_close">Close</string>
</resources>
