<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="?attr/colorSurface">
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>
    <TextView
        style="@style/AppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActivadadAcercaDeTitulo"
        android:textSize="@dimen/cuerpo_de_titulo"
        android:layout_marginBottom="16dp" />

    <TextView
        style="@style/AppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActivadadAcercaDeDescripcionAcercade"
        android:layout_marginBottom="32dp" />

    <TextView
        style="@style/AppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActidadeAcercaDeTextoAutor"
        />

    <TextView
        style="@style/AppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActividadAcercaDeFecha"
        />

    <TextView
        style="@style/AppTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActidadeAcercaDeTextoVersion"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/btnSoporte"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActidadeAcercaDeBtnContactarConSoporte"
        app:icon="@android:drawable/ic_dialog_email"
        />

</LinearLayout>