<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaDeRutas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:fillViewport="true"
        >


        <LinearLayout
            android:background="@color/standar_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasNombre" />

                <EditText
                    style="@style/AltaRutasEditText"
                    android:id="@+id/AltaRutasNombreEditText"
                    android:inputType="text"
                    android:text=""
                    />
            </LinearLayout>
            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasLocalizacion" />

                <EditText
                    style="@style/AltaRutasEditText"
                    android:id="@+id/AltasRutasLocalizacionEditText"
                    android:inputType="text"
                    android:text=""
                    />
            </LinearLayout>
            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasTipoRuta" />

                <RadioGroup
                    android:id="@+id/AltasRutasTipoRadioGroup"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <RadioButton android:id="@+id/AstaRutasTipoCircularRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AltaRutasTipoCircular"
                        android:textColor="@color/white"
                        />
                    <RadioButton android:id="@+id/AstaRutasTipoLinealRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AltaRutasTipoLineal"
                        android:textColor="@color/white"
                        />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasDificultad" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <RatingBar
                        android:id="@+id/ratingBar3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:isIndicator="false"
                         />
                </LinearLayout>

                <!--                <EditText-->
<!--                    style="@style/AltaRutasEditText"-->
<!--                    android:id="@+id/AltaRutasNombreEditText"-->
<!--                    android:inputType="text"-->
<!--                    android:text=""-->
<!--                    />-->
            </LinearLayout>
            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasDistancia" />

                <EditText
                    style="@style/AltaRutasEditText"
                    android:id="@+id/AltaRutasDistanciaEditText"
                    android:inputType="numberDecimal"
                    android:text=""
                    />
            </LinearLayout>
            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasDescripcion" />

                <EditText
                    style="@style/AltaRutasEditText"
                    android:id="@+id/AltaRutasDescripcionEditText"
                    android:inputType="text"
                    android:text=""
                    />
            </LinearLayout>
            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasNotas" />

                <EditText
                    style="@style/AltaRutasEditText"
                    android:id="@+id/AltaRutasNotasEditText"
                    android:inputType="text"
                    android:text=""
                    />
            </LinearLayout>
            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasFavorita" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:gravity="end"
                    >

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Switch" />
                </LinearLayout>

                <!--                <EditText-->
<!--                    style="@style/AltaRutasEditText"-->
<!--                    android:id="@+id/AltaRutasNombreEditText"-->
<!--                    android:inputType="text"-->
<!--                    android:text=""-->
<!--                    />-->
            </LinearLayout>
            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasLatitud" />

                <EditText
                    style="@style/AltaRutasEditText"
                    android:id="@+id/AltaRutasLatitudEditText"
                    android:inputType="numberDecimal|numberSigned"
                    android:text=""
                    />
            </LinearLayout>
            <LinearLayout style="@style/AltasRutasFila">
                <TextView
                    style="@style/AltaRutasTextView"
                    android:text="@string/AltaRutasLongitud" />

                <EditText
                    style="@style/AltaRutasEditText"
                    android:id="@+id/AltaRutasLongitudEditText"
                    android:inputType="numberDecimal|numberSigned"
                    android:text=""
                    />
            </LinearLayout>

            <Button
                style="@style/AppButton"
                android:id="@+id/AltaRutasGuardarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AltaRutasTextoBoton" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>